# dicoding-analisis-data-python

./: notebook.ipynb  pyproject.toml  requirements.txt
.fleet/: run.json
dashboard/: dashboard.py
