[tool.poetry]
name = "analisis-data-python"
version = "0.1.0"
description = ""
authors = ["Moh. Hasbi Assidiqi <mohhasbias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
