[tool.poetry]
name = "analisis-data-python"
version = "0.1.0"
description = ""
authors = ["Moh. Hasbi Assidiqi <mohhasbias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"